Sample JS URL navigation

--- a/settings.gradle
+++ b/settings.gradle
@@ -5,3 +5,4 @@ include ':extensions-android'
 include ':sample:counter:shared'
 include ':sample:counter:app-android'
 include ':sample:counter:app-js'
+include ':sample:js-navigation-url'
