--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 android.useAndroidX=true
 android.enableJetifier=false
 kotlin.code.style=official
-kotlin.native.disableCompilerDaemon=true
+#kotlin.native.disableCompilerDaemon=true
 org.gradle.parallel=true
 org.gradle.caching=true
 systemProp.org.gradle.internal.publish.checksums.insecure=true
