--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,5 @@
 include ':decompose'
+include ':tests' // FIXME: x
 include ':extensions-compose-jetpack'
 include ':extensions-compose-jetbrains'
 include ':extensions-android'
